<resources>
    <string name="app_name">InfoKGS</string>
    <string name="input_nick">Enter your nickname</string>
    <string name="go">Search</string>
    <string name="notification">Notification</string>
    <string name="del_msg">Are you sure want to remove a player from the list?</string>
    <string name="status">"HTTP status 503 - Request quota exceeded".</string>
    <string name="request_quota">The games archive is protected against automated downloads. So when you call pages and archives to fast, your IP will be barred for 1 hour. </string>
    <string name="double_player">User is already in the list!</string>
    <string name="wrong_nickname">Nickname does not exist!</string>
    <string name="remove">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="wrong_msg">You did not enter a nickname!</string>
    <string name="wrong_msg2">User already exists in your list!</string>
    <string name="graf">Graph</string>
    <string name="info">Info</string>

    <string name="white">White:</string>
    <string name="black">Black:</string>
    <string name="setup">Board:</string>
    <string name="time">Date:</string>
    <string name="type">Type:</string>
    <string name="result">Result:</string>
    <string name="link">Link</string>
    <string name="viewable">Viewable?</string>
    <string name="noviewable">View this game is impossible!</string>
    <string name="nogames">No games for this month.</string>
    <string name="guest_acc">Include expired and guest accounts?</string>
    <string name="archive">Save a ZIP archive of games for the month?</string>
    <string name="archive_game">Save the game on the device?</string>
    <string name="file_downloaded">Archive uploaded to sdcard.</string>
    <string name="game_downloaded">Game uploaded to sdcard.</string>
    <string name="download_error">Loading error: </string>

    <string name="download_archive">Download zip</string>

    <string name="ranked">Ranked</string>
    <string name="simul">Simul</string>
    <string name="free">Free</string>
    <string name="rengo">Rengo</string>
    <string name="tournament">Tournament</string>
    <string name="demonstration">Demonstration</string>Teaching
    <string name="teaching">Teaching</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="loading">Loading...</string>
    <string name="ok">Ok</string>

    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>

    <string name="development">Developer:</string>
    <string name="blog">Blog:</string>
    <string name="google_play">Apps:</string>
    <string name="github">Github:</string>

    <string name="libraries">App used the following projects: </string>
    <string name="jsoup">Jsoup:</string>
    <string name="webgoboard">Webgoboard:</string>
    <string name="jsbridge">JsBridge:</string>


    <string name="adv">Click on advertising if you want to support the project</string>





</resources>
